# rust-record-randomiser

./: .gitignore  Cargo.toml  config.example.ini
csv/: example.csv
src/: main.rs
