[package]
name = "rust_record_randomiser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
curl = "0.4.6"
image = "0.25.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
show-image = { version = "0.14.0", features = ["image"] }
config = "0.14.0"
